export default {
  tracesDetails: {
    traceMeta: {
      hits: [
        [
          {
            duration: 295986,
            end_time: 1755853746921707300,
            first_event: {
              _timestamp: 1755853746625720,
              duration: 295986,
              end_time: 1755853746921707300,
              operation_name: "service:alerts:evaluate_scheduled",
              service_name: "alertmanager",
              span_status: "UNSET",
              start_time: 1755853746625720300,
              trace_id: "eab4575014a1fe101dba7de80a3cf6c3",
            },
            service_name: [
              {
                count: 4,
                service_name: "alertmanager",
              },
              {
                count: 31,
                service_name: "querier",
              },
              {
                count: 14,
                service_name: "ingester",
              },
            ],
            spans: [49, 0],
            start_time: 1755853746625720300,
            trace_id: "eab4575014a1fe101dba7de80a3cf6c3",
          },
        ],
      ],
    },
    traceSpans: {
      hits: [
        {
          _timestamp: 1755853746625720,
          busy_ns: "657334",
          code_filepath: "src/service/alerts/mod.rs",
          code_lineno: "114",
          code_namespace: "openobserve::service::alerts",
          duration: 295986,
          end_time: 1755853746921707300,
          events: "[]",
          flags: 1,
          idle_ns: "295329796",
          links: "[]",
          operation_name: "service:alerts:evaluate_scheduled",
          reference_parent_span_id: "d4b07e603e2fa32f",
          reference_parent_trace_id: "eab4575014a1fe101dba7de80a3cf6c3",
          reference_ref_type: "ChildOf",
          service_name: "alertmanager",
          service_service_instance: "dev2-openobserve-alertmanager-0",
          service_service_version: "v0.15.0-rc5",
          span_id: "6b080023171f5767",
          span_kind: "1",
          span_status: "UNSET",
          start_time: 1755853746625720300,
          status_code: 0,
          status_message: "",
          thread_id: "5",
          thread_name: "job_runtime",
          trace_id: "eab4575014a1fe101dba7de80a3cf6c3",
        },
        {
          _timestamp: 1755853746625779,
          busy_ns: "648454",
          code_filepath: "src/service/search/grpc_search.rs",
          code_lineno: "31",
          code_namespace: "openobserve::service::search::grpc_search",
          duration: 295923,
          end_time: 1755853746921702400,
          events: "[]",
          flags: 1,
          idle_ns: "295275675",
          links: "[]",
          operation_name: "service:search:grpc_search",
          reference_parent_span_id: "6b080023171f5767",
          reference_parent_trace_id: "eab4575014a1fe101dba7de80a3cf6c3",
          reference_ref_type: "ChildOf",
          service_name: "alertmanager",
          service_service_instance: "dev2-openobserve-alertmanager-0",
          service_service_version: "v0.15.0-rc5",
          span_id: "d427ced59acf399b",
          span_kind: "1",
          span_status: "UNSET",
          start_time: 1755853746625779000,
          status_code: 0,
          status_message: "",
          thread_id: "5",
          thread_name: "job_runtime",
          trace_id: "eab4575014a1fe101dba7de80a3cf6c3",
        },
        {
          _timestamp: 1755853746625790,
          busy_ns: "320271",
          code_filepath: "src/service/search/grpc_search.rs",
          code_lineno: "56",
          code_namespace: "openobserve::service::search::grpc_search",
          duration: 295178,
          end_time: 1755853746920969200,
          events: "[]",
          flags: 1,
          idle_ns: "294858953",
          links: "[]",
          node_addr: "http://10.1.105.53:5081",
          node_id: "5",
          operation_name: "service:search:cluster:grpc_search",
          reference_parent_span_id: "d427ced59acf399b",
          reference_parent_trace_id: "eab4575014a1fe101dba7de80a3cf6c3",
          reference_ref_type: "ChildOf",
          service_name: "alertmanager",
          service_service_instance: "dev2-openobserve-alertmanager-0",
          service_service_version: "v0.15.0-rc5",
          span_id: "bf6bde74cdcc245f",
          span_kind: "1",
          span_status: "UNSET",
          start_time: 1755853746625790200,
          status_code: 0,
          status_message: "",
          thread_id: "5",
          thread_name: "job_runtime",
          trace_id: "eab4575014a1fe101dba7de80a3cf6c3",
        },
      ],
    },
  },
};
